<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test GitHub Client</string>
    <string name="loading">...ЗАГРУЗКА...</string>
    <string name="pull_to_refresh">Потяните, чтобы обновить</string>
    <string name="na">N/A</string>

    <!-- AlertDialogFragment -->
    <string name="retry">Повторить</string>
    <string name="refresh">Обновить</string>
    <string name="cancel">Отмена</string>
    <string name="logout">Выйти</string>
    <string name="exit">Выход</string>

    <!-- Выбор типа авторизации -->
    <string name="personal_token_button">Personal token</string>
    <string name="personal_token_description">Создание персонального токена на основе базовой авторизации. Логин/пароль вводятся в приложении, но не сохраняются, а отправляются на api.github.com для создания токена доступа без подтверждения разрешения на получение доступа к репозиториям</string>
    <string name="oauth_webflow_description">Правильная Oauth-авторизация через сервис github.com c запросом подтверждения разрешений и доступа приложения к списку репозиториев пользоателя.</string>
    <string name="oauth_webflow_button">Oauth via WebFlow</string>
    <string name="title_activity_authorization_types">Выберите авторизацию</string>

    <string name="title_activity_webflow">Получение доступа</string>
    <string name="no_internet_browser_activity">No internet browser installed?</string>

    <!-- АВТОРИЗАЦИЯ -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Войти</string>
    <string name="error_field_required">Заполните это поле</string>
    <string name="title_activity_login">Авторизация</string>

    <!-- СПИСОК РЕПОЗИТОРИЕВ / ГЛАВНЫЙ ЭКРАН -->
    <string name="title_activity_repository_list">Доступные репозитории</string>
    <string name="greetings">Вы авторизованы как </string>
    <string name="th_repolist_repository">Репзоиторий</string>
    <string name="th_repolist_owner">Владелец</string>
    <string name="th_repolist_frks_wtchr">frks\nwtchr</string>
    <string name="th_repolist_frks">frks</string>
    <string name="th_repolist_wtchr">wtchr</string>
    <string name="no_repositories">Похоже, доступных репозиториев нет</string>

    <!-- СПИСОК КОММИОТОВ РЕПОЗИТОРИЯ -->
    <string name="title_activity_repository">Коммиты репозитория</string>
    <string name="repo_unavailable">Возможно, такого репозитория не существует или у Вас нет к нему доступа.</string>
    <string name="no_commits">Похоже, ещё не было ни одного коммита</string>
    <string name="repo_created">Создан: </string>
    <string name="repo_pushed">Обновлён: </string>
    <string name="repo_owner">Владелец: </string>
    <string name="repo_description">Описание: </string>
    <string name="th_commitlist_commit">Коммит</string>
    <string name="th_commitlist_descr">Описание</string>
    <string name="th_commitlist_author">Автор</string>
    <string name="th_commitlist_date">Дата</string>







    <!-- нечто -->
    <string name="action_settings">Settings</string>


    <string name="hello_world">Greetings, </string>
    <string name="title_activity_alert">Внимание</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
