<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:background="@color/color_background_base"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/section_text_secondary"
            android:text="@string/oauth_webflow_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            style="@style/RaisedTextButton"
            android:layout_marginTop="10dp"
            android:id="@+id/btnWebflow"
            android:text="@string/oauth_webflow_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="@style/RaisedTextButton"
            android:id="@+id/btnPersonal"
            android:text="@string/personal_token_button"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/section_text_secondary"
            android:text="@string/personal_token_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>