<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@color/color_background_base"
              android:orientation="vertical"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin_smallen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:text="username"
            android:id="@+id/tvUserName"
            android:textColor="@color/section_text_primary"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <ImageButton
            android:elevation="8dp"
            android:background="@color/color_accent"
            android:padding="4dp"
            android:src="@drawable/ic_launcher"
            android:id="@+id/ibLogout"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin_smallen"
        android:paddingRight="@dimen/activity_horizontal_margin_smallen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginRight="@dimen/repo_list_owner_pad"
            android:layout_width="@dimen/repo_list_avatar"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/section_text_secondary"
            android:text="@string/th_repolist_repository"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            />

        <TextView
            android:textColor="@color/section_text_secondary"
            android:text="@string/th_commitlist_author"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/repo_list_owner"
            android:layout_height="wrap_content"
            />

        <TextView
            android:textColor="@color/section_text_secondary"
            android:text="@string/th_repolist_frks_wtchr"
            android:gravity="right"
            android:layout_width="@dimen/repo_list_forkswatchers"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


</LinearLayout>